--- a/index.html
+++ b/index.html
@@ -4,25 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>할뚜이따!</title>
 </head>
 <body>
 
-    <section>
-        <div class="clockContainer">
-            <h3 class="js-clock">00:00</h3>
+    <section class="center">
+        <div class="clockContainer clock">
+            <h3 class="js-clock ">00:00</h3>
         </div>
-        <div class="nameContainer"></div>
+        <div class="nameContainer name"></div>
         <div>
-            <form class="toDoForm">
+            <form class="toDoForm to-do">
                 <input type="text" placeholder="Write To DO here">
             </form>
-            <ul class="toDoList"></ul>
+            <ul class="toDoList list"></ul>
+        </div>
+    </section>
+
+        <div class="js-location location">
+            <span class="location__text"></span>
         </div>
 
-    </section>
+        <div class="js-weather weather">
+            <span class="weather__text"></span>
+        </div>
+
+    
     <script src="js/clock.js"></script>
     <script src="js/greeting.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/bg.js"></script>
+    <script src="js/weather.js"></script>
 </body>
 </html>
